--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.2",
+    "mdbreact": "^5.0.2",
     "react": "^17.0.2",
     "react-async": "^10.0.1",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-google-material-icons": "^1.0.4",
+    "react-iframe": "^1.8.0",
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
+    "react-slideshow-image": "^3.5.0",
     "react-text": "^3.2.4",
+    "react-youtube": "^7.13.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
